Implementing rest client using feign. Implementing session entity. Implementing agenda service. Implementing Session service. Updating applicaiton.yml Updating Session model. Updating SessionServiceApplication.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
       host: localhost
       port: 27017
       database: session
+
+agenda:
+  service:
+    name: 'agenda-service'
+    url: 'http://localhost:8080/agenda-service/v1'
